# tendrils-cli

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-3RD-PARTY.md  LICENSE.md  README-CLI.md  README.md  Tendrils.nu  build.rs  cargo.toml
.github/workflows/: ci.yml
assets/: basic-demo.tape  profiles-demo.tape
dev/: 3rd-party-metadata.json  Dockerfile.dev  Dockerfile.example  Dockerfile.gifs  README.md  setup-containers.sh  setup-tendrils.nu  setup-tendrils.sh  test-full.nu  test-full.sh
dev/generic/: get-os.sh  setup.nu  test-staged.nu  test-staged.sh
dev/hooks/: pre-commit
dev/license-updater/: Cargo.toml  LICENSE.md
dev/license-updater/src/: main.rs
dev/utils/: 3rd-party-compile-licenses.nu  3rd-party-update-cargo-deps.nu  build-docs.sh  build-td.sh  check-tempdir-empty.sh  list_contains.nu  rec_contains.nu  test-except-admin.sh
docs/: configuration.md  developers.md  tendrils-commands.md
docs/example-repo/: useful-notes.txt
docs/example-repo/.tendrils/: tendrils.json
docs/example-repo/networking/: hosts
docs/example-repo/obsidian/: appearance.json  hotkeys.json
docs/example-repo/obsidian/snippets/: style1.css  style2.css
docs/example-repo/rust/: rustfmt.toml
docs/example-repo/terminal/nushell/: env.nu
docs/example-repo/terminal/windows-terminal/: settings.json
docs/example-repo/vim/: .vimrc_profile1  .vimrc_profile2
docs/example-repo/vscode/: keybindings.json
src/: about.rs  action_mode.rs  cli.rs  enums.rs  errors.rs  file_system.rs  lib.rs  main.rs  resolved_tendril.rs  sample_tendrils.rs  tendril.rs  tendril_action_report.rs  test_utils.rs  writer.rs
src/bintests/: execute_tests.rs  mod.rs  run_tests.rs
src/cli/: td_table.rs  tendril_action_report.rs  writer.rs
src/cli/tests/: mod.rs  run_tests.rs
src/libtests/: filter_by_mode_tests.rs  filter_by_profiles_tests.rs  get_tendril_override_tests.rs  get_tendril_overrides_tests.rs  get_tendrils_dir_tests.rs  get_tendrils_folder_tests.rs  get_tendrils_tests.rs  is_tendrils_dir_tests.rs  is_tendrils_folder_tests.rs  link_tendril_tests.rs  mod.rs  parse_env_variables_tests.rs  parse_tendrils_tests.rs  pull_tendril_tests.rs  pull_tests.rs  push_tendril_tests.rs  resolve_overrides_tests.rs  resolve_path_variable_tests.rs  resolve_tendril_tests.rs  resolved_tendril_tests.rs  run_tests.rs  sample_tendrils.rs  tendril_action_tests.rs  test_utils.rs
src/tests/: run_tests.rs
src/utests/: common.rs  get_tendril_override_tests.rs  get_tendrils_folder_tests.rs  get_tendrils_tests.rs  is_tendrils_folder_tests.rs  mod.rs  parse_tendrils_tests.rs  pull_tendril_tests.rs  pull_tests.rs  resolve_overrides_tests.rs  resolve_path_variable_tests.rs
td/: Cargo.toml
td/src/: cli.rs  main.rs  writer.rs
td/src/cli/: td_table.rs
td/src/tests/: run_tests.rs
tendrils/: Cargo.toml  LICENSE.md
tendrils-core/: Cargo.toml  LICENSE.md  README.md
tendrils-core/src/: config.rs  enums.rs  env_ext.rs  filtering.rs  lib.rs  tendril_report.rs  test_utils.rs
tendrils-core/src/filtering/tests/: filter_by_profiles_tests.rs  filter_by_remotes_tests.rs  filter_tendrils_tests.rs
tendrils-core/src/path_ext/tests/: join_raw_tests.rs  replace_dir_seps_tests.rs  resolve_env_variable_tests.rs  test_paths.rs  uni_path_tests.rs
tendrils-core/src/tests/: batch_tendril_action_tests.rs  common_action_tests.rs  get_default_repo_tests.rs  init_tendrils_repo_tests.rs  is_tendrils_repo_tests.rs  link_tendril_tests.rs  list_tendrils_inner_tests.rs  mod.rs  pull_tendril_tests.rs  push_tendril_tests.rs  tendril_action_tests.rs  tendril_action_updating_tests.rs
tendrils/src/: config.rs  enums.rs  env_ext.rs  filtering.rs  lib.rs  path_ext.rs  resolved_tendril.rs  tendril.rs  tendril_action_metadata.rs  tendril_action_report.rs  tendril_bundle.rs  tendril_metadata.rs  tendril_report.rs  test_utils.rs
tendrils/src/config/tests/: get_config_tests.rs  get_global_config_tests.rs  mod.rs  parse_config_tests.rs
tendrils/src/filtering/tests/: filter_by_group_tests.rs  filter_by_locals_tests.rs  filter_by_mode_tests.rs  filter_by_names_tests.rs  filter_by_parents_tests.rs  filter_by_profiles_tests.rs  filter_by_remotes_tests.rs  filter_tendrils_tests.rs  mod.rs
tendrils/src/path_ext/tests/: join_raw_tests.rs  mod.rs  reduce_tests.rs  resolve_env_variable_tests.rs  resolve_path_variable_tests.rs  resolve_tilde_tests.rs  root_tests.rs  to_absolute_tests.rs  uni_path_tests.rs
tendrils/src/tendril/tests/: mod.rs  parse_env_variables_tests.rs  resolve_path_variable_tests.rs  resolve_tendrils_tests.rs  tendril_tests.rs
tendrils/src/tests/: batch_tendril_action_tests.rs  batch_tendril_action_updating_tests.rs  common_action_tests.rs  filter_by_mode_tests.rs  filter_by_profiles_tests.rs  get_default_repo_tests.rs  get_tendrils_dir_tests.rs  get_tendrils_repo_tests.rs  get_tendrils_tests.rs  init_tendrils_dir_tests.rs  init_tendrils_repo_tests.rs  is_tendrils_dir_tests.rs  is_tendrils_repo_tests.rs  link_tendril_tests.rs  mod.rs  parse_tendrils_tests.rs  pull_tendril_tests.rs  push_tendril_tests.rs  resolve_path_variable_tests.rs  resolve_tendril_bundle_tests.rs  resolve_tendril_tests.rs  resolved_tendril_tests.rs  sample_tendrils.rs  tendril_action_tests.rs  tendril_action_updating_tests.rs  tendril_tests.rs
tests/SampleTendrilsFolder/: tendrils-overrides.json  tendrils.json
tests/SampleTendrilsFolderNoOverrides/: tendrils.json
tests/samples/: README.md
tests/samples/NoReadAccess/: README.md
