[package]
name = "tendrils-cli"
description = "Flexibly manage files/folders throughout the computer from a single location"
license.workspace = true
repository.workspace = true
version = "0.0.1"
edition = "2021"
readme = "README-CLI.md"
include = ["/src", "/build.rs", "LICENSE.md", "/assets/logo.ico"]
categories = ["command-line-utilities", "config", "filesystem"]
keywords.workspace = true

[[bin]]
name = "td"
path = "src/main.rs"

[features]
default = ["logo"]
logo = ["metadata"] # Embeds the logo in the executable
metadata = ["dep:winresource"] # Embeds metadata in the executable

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
exitcode = "1.1.2"
inline_colorization = "0.1.6"
tabled = { version = "0.16.0", features = ["ansi"] }
tendrils-core = { path = "./tendrils-core", version = "0.0.1" } # See also the usage in dev-dependencies

[dev-dependencies]
rstest = "0.23.0"
serial_test = "3.2.0"
tempdir = "0.3.7"
# Despite being a dev-dependency, in order to prevent "_test_utils"
# from being included in non-testing builds the resolver "2" must
# be used (see workspace Cargo.toml).
tendrils-core = { path = "./tendrils-core", version = "0.0.1", features = ["_test_utils"] }

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.17", optional = true } # See "metadata" feature

[lints]
workspace = true

[workspace.package]
license = "GPL-3.0-or-later"
repository = "https://github.com/TendrilApps/tendrils-cli"
keywords = ["configuration", "sync", "backup", "dotfiles", "centralized"]

[workspace]
members = [
    "tendrils-core",
]
resolver = "2" # Required to use 2 vs 1 to prevent _test_utils
               # being included even outside of testing

[workspace.lints.rust]
private-bounds = "deny"
private-interfaces = "deny"

[workspace.lints.rustdoc]
broken-intra-doc-links = "forbid"
private-intra-doc-links = "forbid"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
incremental = true
