[package]
name = "tendrils-core"
description = "Core library for Tendrils"
license.workspace = true
repository.workspace = true
version = "0.0.1"
edition = "2018"

[features]
# Exposes members that that are only meant for usage in tests within
# this workspace and should not be depended on otherwise
_test_utils = ["dep:tempdir"]

# A set of tests that requires admin priviledges to pass.
# This should only be run in the dedicated testing container.
_admin_tests = []

[dependencies]
fs_extra = "1.3.0"
# Chose glob-match over globset due to having no dependencies
# and greatly reduced bloat of binary size
glob-match = "0.2.1"

indexmap = { version = "2.6.0", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tempdir = { version = "0.3.7", optional = true }

[dev-dependencies]
rstest = "0.23.0"
rstest_reuse = "0.7.0"
serial_test = "3.2.0"
tempdir = "0.3.7"

[target.'cfg(windows)'.dependencies]
is-root = "0.1.3"
winreg = "0.52.0"

[lints]
workspace = true
