[package]
name = "tendrils-core"
description = "Core library for Tendrils"
license.workspace = true
repository.workspace = true
version = "0.0.3"
edition = "2018"
categories = ["command-line-utilities", "config", "filesystem"]
keywords.workspace = true

[features]
# Exposes members that that are only meant for usage in tests within
# this workspace and should not be depended on otherwise
_test_utils = ["dep:tempdir"]

# A set of tests that requires admin priviledges to pass.
# This should only be run in the dedicated testing container.
_admin_tests = []

[dependencies]
fs_extra = { workspace = true }
# Chose glob-match over globset due to having no dependencies
# and greatly reduced bloat of binary size
glob-match = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempdir = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serial_test = { workspace = true }
tempdir = { workspace = true }

[target.'cfg(windows)'.dependencies]
is-root = { workspace = true }
winreg = { workspace = true }

[lints]
workspace = true
